# Project_LLM-RAG

./: .dockerignore  .env.example  .gitignore  README.md  app.json  docker-compose.yml  eas.json  package.json  render.yaml  start.py  起動.bat
app/: _layout.tsx
app/(tabs)/: _layout.tsx  index.tsx  search.tsx
backend/: .dockerignore  Dockerfile  app.py  main.py  requirements.txt
backend/backend/data/chroma_db/: chroma.sqlite3
backend/src/: config.py  generator.py  vectorstore.py
docs/: launch-checklist.md  store-listing.md
frontend/: Dockerfile  index.html  manifest.json  style.css  sw.js  web.js
public/: _headers  _redirects  index.html  manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/waste/: RecordingModal.tsx
src/data/: nagareyama.json  registry.ts
src/i18n/: en.ts  ja.ts
src/services/: notificationService.ts  searchService.ts
src/types/: models.ts
