[package]
name = "gomi-collection-assistant"
version = "1.1.0"
description = "ごみ収集アシスタント - AIでごみの分別をサポート"
authors = ["you"]
edition = "2021"

[lib]
name = "gomi_collection_assistant_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
